Fix todos container overflow bug

--- a/index.css
+++ b/index.css
@@ -66,7 +66,7 @@ html {
 
 body {
   font-family: "Kanit", serif;
-  min-height: 100vh;
+  height: 100vh;
   background-color: var(--body-bg-color);
   display: flex;
   flex-direction: column;
@@ -161,6 +161,8 @@ body {
   background-color: var(--todos-bg-color);
   border-radius: 0.8rem;
   height: 78vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .form--todo {
@@ -210,6 +212,12 @@ body {
   display: block;
 }
 
+.todos-container {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+}
+
 .empty-todos__img {
   display: block;
   margin: 9.6rem auto 0 auto;
@@ -240,7 +248,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
-  height: 64.2vh;
+  flex: 1 1 0;
   overflow: auto;
 }
 
